# legal-ops-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CASE_STUDY.md  CONTRIBUTING.md  Makefile  README.md  READY_2026.md  SECURITY.md  agent.py  master_orchestrator.py  mcp.json  models.py  orchestrator_results.json  output_test_interview.md  partners_db.json  pyproject.toml  recruiting_agent.py  reply_agent.py  requirements.in  sample-output.md  what-this-proves.md
.github/: CODEOWNERS
agents/: __init__.py  agent_a_glass_ceiling_scout.py  agent_b_rainmaker_profiler.py  agent_c_outreach_architect.py  agent_d_scheduling_concierge.py  agent_e_signal_hunter.py  agent_f_thought_leader_ghostwriter.py  agent_g_niche_authority_amplifier.py  agent_h_onboarding_orchestrator.py  agent_i_digital_associate.py  agent_j_interview_processor.py  agent_k_revenue_predictor.py  agent_l_insolvency_deal_finder.py
docs/: API.md  FEATURES.md  SETUP.md  TESTING.md  architecture.mmd  code_explanation.md  competitive-research-2026-06-30.md  evaluator-guide.md  launch-readiness.md  tasks.md  tool-risk-registry.md  user_guide.md
examples/: audit-chain-saas-msa-2026-06-30.json  matter-run.md  source-verified-saas-msa-run-2026-06-30.json  source-verified-saas-msa-run-2026-06-30.md  trust-cockpit-saas-msa-2026-06-30.json  trust-cockpit-saas-msa-2026-06-30.md  worked-example.md
runtime_agent/: __init__.py  app.py
scripts/: generate_matter_run.py
src/: artifact_manifest.py  audit_chain.py  cli.py  config.py  exports.py  gemini_client.py  intelligence_core.py  legal_ops.py  mcp_tools.py  review_packet.py  review_packet_runner.py  (+2 more)
(+27 files in other folders)
